--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Walks an npm package's dependency tree.",
   "main": "index.js",
   "author": "Zentrick nv (https://www.zentrick.com/)",
+  "contributors": [
+    "Tim De Pauw <tim.depauw@zentrick.com>",
+    "Laurent De Smet <laurent.desmet@zentrick.com>"
+  ],
   "engines": {
     "node": ">=0.12.0"
   },
